o grinding não pode parar

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,4 +40,5 @@ add_executable(ProjetoPooCpp main.cpp
         ClassesSistema/Casal.hpp
         ClassesSistema/Lar.hpp
         ClassesSistema/Lar.cpp
+        ClassesSistema/Casamento.cpp
 )
